[gd_scene load_steps=6 format=3 uid="uid://4lod2j423xb1"]

[ext_resource type="Script" path="res://scripts/fogao.gd" id="1_6nion"]
[ext_resource type="Texture2D" uid="uid://bfl355ch1o68h" path="res://assets/12_Kitchen_Singles_Shadowless_32x32/Kitchen_Singles_Shadowless_32x32_148.png" id="2_lcgp3"]
[ext_resource type="Texture2D" uid="uid://ciln53ju0evab" path="res://assets/12_Kitchen_Singles_Shadowless_32x32/Kitchen_Singles_Shadowless_32x32_152.png" id="3_kppnf"]
[ext_resource type="PackedScene" uid="uid://d8x4i3rb07lu" path="res://scenes/task_timer.tscn" id="4_xk1h0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0hwkh"]
size = Vector2(32, 31)

[node name="fogao" type="Node2D" groups=["fogao"]]
script = ExtResource("1_6nion")

[node name="Vazio" type="Sprite2D" parent="."]
position = Vector2(1, 0)
texture = ExtResource("2_lcgp3")

[node name="Cozindo" type="Sprite2D" parent="."]
visible = false
position = Vector2(1, 0)
texture = ExtResource("3_kppnf")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 32768
collision_mask = 32768

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1, -12.5)
shape = SubResource("RectangleShape2D_0hwkh")

[node name="Panela" type="Node2D" parent="."]
position = Vector2(6, -11)

[node name="TaskTimer" parent="." instance=ExtResource("4_xk1h0")]
position = Vector2(0, -45)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="task_ended" from="TaskTimer" to="." method="_on_task_timer_task_ended"]
